Fixed font sizing on smaller devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,3 +5,32 @@ Just customize your theme here.
 
 body {}
 
+
+
+    #hero-lead {
+        
+        font-size:2.5em;
+        color: white;
+        background-color: rgb(215,56,117);
+        line-height: 1.5   
+    }
+    #hero-subtitle{
+        background-color:rgb(0,111,199);
+        color: white;
+    }
+
+
+@media (max-width:767px) {
+    #hero-lead {
+        font-size:2em;
+        color: white;
+        background-color: rgb(215,56,117);
+        line-height: 1.5
+    }
+
+    #hero-subtitle{
+        background-color:rgb(0,111,199);
+        color: white;
+        font-size: 1rem;
+    }
+}
